Add Munkres algorithm tutorial.

--- a/css/blog.css
+++ b/css/blog.css
@@ -30,8 +30,16 @@
 .image-post img {
     border: none;
     max-width: 100%;
+    display: block;
+    margin: auto;
+}
+.content .pure-g {
+    padding-bottom: 2em;
 }
 
+.fa {
+    color: white;
+}
 @media (min-width: 64em) {
     .content {
         padding: 3.7em 1em 0;
@@ -49,7 +57,7 @@
         bottom: 0;
     }
 
-    .image-post img {
+    .image-post, .text-post {
         padding-right: 2em;
     }
 }
