--- a/css/blog.css
+++ b/css/blog.css
@@ -10,7 +10,7 @@
 .header {
     text-align: center;
     top: auto;
-    margin: 3em auto;
+    margin: 1em auto;
     left: 50%;
 }
 
@@ -40,6 +40,15 @@
 .fa {
     color: white;
 }
+.avatar {
+    display: none
+}
+.avatar img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 50%;
+    border: 3px solid;
+}
 @media (min-width: 64em) {
     .content {
         padding: 3.7em 1em 0;
@@ -59,5 +68,8 @@
 
     .image-post, .text-post {
         padding-right: 2em;
+    }
+    .avatar{
+        display: block;
     }
 }
