--- a/css/blog.css
+++ b/css/blog.css
@@ -49,6 +49,15 @@
     border-radius: 50%;
     border: 3px solid;
 }
+
+.content h3 {
+  font-family: inherit;
+  font-weight: 400;
+  line-height: 1.1;
+  color: inherit;
+  border-bottom: 0 solid #eee;
+}
+
 @media (min-width: 64em) {
     .content {
         padding: 3.7em 1em 0;
