Update js and css.

--- a/css/bsmdoc.css
+++ b/css/bsmdoc.css
@@ -24,7 +24,8 @@ body {
     margin-bottom: 50px;
     line-height: 1.6em;
 }
-#layout {
+
+.layout {
     padding-top: 1.0em;
     padding-left: 1.0em;
     padding-right: 1.0em;
@@ -38,9 +39,9 @@ body {
     margin-right: auto;
 }
 
-#layout h1:first-child,
-#layout h2:first-child,
-#layout h3:first-child {
+.layout h1:first-child,
+.layout h2:first-child,
+.layout h3:first-child {
     margin-top: -0.7em;
 }
 
@@ -342,23 +343,23 @@ p + div.codeblock {
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
-	border-left: None;
-	border-right: None;
-	border-top: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
-	border-radius: 0px;
+    border-left: None;
+    border-right: None;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    border-radius: 0;
 }
 
 .syntaxtable pre {
-	border: None;
-	border-radius: 0px;
+    border: None;
+    border-radius: 0;
 }
 .syntaxtable .linenos {
-	padding-right: 0px;
-	background: #eee
+    background: #eee;
+    padding-right: 0;
 }
 .syntaxtable .linenos pre {
-	background: #eee
+    background: #eee
 }
 
 table {
