--- a/css/menu.css
+++ b/css/menu.css
@@ -11,7 +11,9 @@ Add transition to containers so they can push in and out.
     -o-transition: all 0.2s ease-out;
     transition: all 0.2s ease-out;
 }
-
+.menu:empty {
+    display: None;
+}
 /*
 This is the parent `<div>` that contains the menu and the content area.
 */
